# glamor

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  glamor-egl.pc.in  glamor.pc.in  project.config
conf/: Makefile.in
src/: Makefile.in  glamor.c  glamor_copyarea.c  glamor_copyplane.c  glamor_core.c  glamor_fbo.c  glamor_fill.c  glamor_getspans.c  glamor_glyphblt.c  glamor_gradient.c  glamor_picture.c  glamor_pixmap.c  glamor_polylines.c  glamor_priv.h  glamor_putimage.c  glamor_render.c  glamor_setspans.c  glamor_trapezoid.c  glamor_utils.h  glamor_vbo.c  glamor_xv.c
